# bitcoin-dashboard

./: .gitignore  PROJECT_CONTEXT.md  migration_check.py  pyproject.toml  requirements.txt  test_basics.py  test_debug.py
.agent/rules/: backend.md  dash-mantine-cheat-sheet.md  orchestrator.md  ui.md
dashboard/: app.py
dashboard/assets/: dash_academic.css
dashboard/tabs/: tab_companies_callbacks.py  tab_companies_dash.py  tab_onchain_callbacks.py  tab_onchain_dash.py  tab_price_dash.py  tab_price_dash_callbacks.py
data_collectors/: blockchain_com_api.py  glassnode_api.py  mempool_api.py  price_data.py  proof_of_reserve.py  proof_score.py  treasury_data.py  treasury_entities.py
tests/: test_price_data.py
utils/: logger.py
