[project]
name = "bitcoin-dashboard"
version = "0.3.0"
description = "Bitcoin Analytics Dashboard - Network + Institutions"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
